# dsc102-pa1

./: .gitignore  pyproject.toml  writeup.md
src/: ec2_initialization.sh  ec2_startup.sh  emr_initialization.sh  emr_startup.sh  feature_prep.py  label_prep.py  model-creation.py  model_creation.py
writeup-assets/: max-parallelization.dot
